--- a/src/main/webapp/ModifDonnée.css
+++ b/src/main/webapp/ModifDonnée.css
@@ -15,7 +15,7 @@ li{
 body{
 	margin: 0;
     padding: 0;
-	background : url(ModifProd.jpg)  no-repeat center fixed;
+	background : url(Image/ModifProd.jpg)  no-repeat center fixed;
 	background-size: cover;
 }
 
