--- a/src/main/webapp/css/HistComm.css
+++ b/src/main/webapp/css/HistComm.css
@@ -11,7 +11,7 @@ and open the template in the editor.
 body{
   margin: 0;
     padding: 0;
-  background : url(Image/produit.png)  no-repeat center fixed;
+  background : url(/Image/produit.png)  no-repeat center fixed;
   background-size: cover;
 }
 
